# check-out-fe-legacy

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: staging.yaml
data/: areaNo.xlsx
