[tool.poetry]
name = "check-out-fe"
version = "0.1.0"
description = ""
authors = ["inthree3 <42310616+inthree3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
pillow = "^10.3.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
jinja2 = ">=3.1.2"
minio = "^7.2.7"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
